[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ariadne-tracer"
version = "0.5.0"
description = "A blockchain money-flow tracer — follow the thread of money out of the labyrinth."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "the Ariadne authors" }]
keywords = ["blockchain", "forensics", "aml", "bitcoin", "ethereum", "tracing", "osint"]
dependencies = [
    "requests>=2.31",
    "rich>=13.7",
    "flask>=3.0",
    "cryptography>=42.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
# Pragmatic set: pyflakes (F) + a subset of pycodestyle (E) + isort (I) + bugbear (B).
select = ["E", "F", "I", "B"]
# E501 (line length) is governed by line-length; E741 ambiguous names are fine here.
ignore = ["E501", "E741"]

[tool.ruff.lint.per-file-ignores]
# Test fakes use intentionally compact one-line methods and re-defined helpers.
"tests/*" = ["E402", "F811", "E701", "E702", "B011"]

[project.scripts]
ariadne = "ariadne.cli:main"

[tool.setuptools.packages.find]
include = ["ariadne*"]

[tool.setuptools.package-data]
ariadne = ["data/*.json", "web/static/*"]
